--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -15,7 +15,7 @@
 <header class="sticky" id="header">
   <div>
     <ul>
-      <!--These are tthe navigation links-->
+      <!--These are the navigation links-->
       <li><a href="#" id="aboutlink" class="about">Home</a></li>
       <li><a href="#skills" class="link">Skills</a></li>
       <li><a href="#projects" class="link">Projects</a></li>
