--- a/Portfolio/SpinTheMoose.html
+++ b/Portfolio/SpinTheMoose.html
@@ -2,131 +2,135 @@
 <html>
 <head>
   <title>Samantha Crosby</title>
+  <!--This is the link to the styleshseet-->
   <link rel="stylesheet" type="text/css" href="style.css">
+  <!--This is the link to the responsive styleshseet-->
   <link rel="stylesheet" type="text/css" href="responsive.css">
-
-  <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
+  <!--This is the link to the portfolio JaavScript file-->
   <script src="portfolio.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
 </head>
 <body>
-
+<!--This is the header for the site-->
 <header class="sticky" id="header">
   <div>
     <ul>
+      <!--These are the navigation links-->
       <li><a href="index.html" id="aboutlink" class="about">Home</a></li>
       <li><a href="index.html#skills" class="link">Skills</a></li>
       <li><a href="index.html#projects" class="link">Projects</a></li>
       <li><a href="#contact" class="link">Contact</a></li>
     </ul>
   </div>
-
 </header>
+<!--This is the button that sends the user back to the top of the page-->
+  <button class="bounce" onclick="window.location.href='#'" id="top">&Hat;</button>
+  <!--This is the rubyside title-->
+  <h1 class="title" style="margin-top:50px;">Spin The Moose</h1>
 
-<button class="bounce" onclick="window.location.href='#'" id="top">&Hat;</button>
-
-<h1 class="title" style="margin-top:50px;">Spin The Moose</h1>
-
-<div class="process">
-<div class="problem">
-  <h2 class="title">The Problem</h2>
-  <p>The problem was that Smaller Earth were looking for ideas
-  to promote their Summer Camp in Canada program. They decided
-  they would like a virtual game that could sit on any web page
-  of the Smaller Earth site. This game would be a spinner game
-  in which the user could click a button to "Spin the Moose".
-  When the button is clicked, the moose would spin through 8
-  different prizes on the wheel and land on a random prize.
-  Before the user can claim their prize, a form is produced that
-  requires the users to enter their name, email and phone number.</p>
-</div>
-
-<hr>
-
-<div class="design">
-  <h2 class="title">Design</h2>
-  <p>Low-fidelity prototypes were used to create quick, rough
-    sketches of different designs. High-fidelity prototypes
-    were used to create the final look for the game.
-    A carnival theme was chosen because this build is to be a game
-    and carnivals are known for having lots of games. The background
-    for the game became a carnival stall, with a prizes board,
-    the spin the moose board and a carnival man. The colours for
-    the spin the moose board were taken from the Smaller Earth
-    website to help it fit in with the rest of the site.</p>
-
-    <div class="mooseprototype">
-      <img class="prototype" src="images/mooselow.png" alt="Low-fidelity prototype" style="max-width:390px;margin-top:30px"></img>
-      <img class="prototype" src="images/moosehigh.png" alt="High-fidelity prototype" style="max-width:390px;margin-top:40px;"></img>
+  <div class="process">
+    <!--This is the problem section-->
+    <div class="problem">
+      <!--This is the problem title-->
+      <h2 class="title">The Problem</h2>
+      <!--This is the problem text-->
+      <p>The problem was that Smaller Earth were looking for ideas
+      to promote their Summer Camp in Canada program. They decided
+      they would like a virtual game that could sit on any web page
+      of the Smaller Earth site. This game would be a spinner game
+      in which the user could click a button to "Spin the Moose".
+      When the button is clicked, the moose would spin through 8
+      different prizes on the wheel and land on a random prize.
+      Before the user can claim their prize, a form is produced that
+      requires the users to enter their name, email and phone number.</p>
     </div>
 
-</div>
+    <hr>
+    <!--This is the design section-->
+    <div class="design">
+      <!--This is the design title-->
+      <h2 class="title">Design</h2>
+      <!--This is the design text-->
+      <p>Low-fidelity prototypes were used to create quick, rough
+        sketches of different designs. High-fidelity prototypes
+        were used to create the final look for the game.
+        A carnival theme was chosen because this build is to be a game
+        and carnivals are known for having lots of games. The background
+        for the game became a carnival stall, with a prizes board,
+        the spin the moose board and a carnival man. The colours for
+        the spin the moose board were taken from the Smaller Earth
+        website to help it fit in with the rest of the site.</p>
+        <!--These are the prototype images-->
+        <div class="mooseprototype">
+          <img class="prototype" src="images/mooselow.png" alt="Low-fidelity prototype" style="max-width:390px;margin-top:30px"></img>
+          <img class="prototype" src="images/moosehigh.png" alt="High-fidelity prototype" style="max-width:390px;margin-top:40px;"></img>
+        </div>
+    </div>
 
-<hr>
+    <hr>
+    <!--This is the build section-->
+    <div class="build">
+      <!--This is the build title-->
+      <h2 class="title">Build</h2>
+      <!--This is the build text-->
+      <p>The game was created using HTML, SASS and JavaScript. When the
+      button is clicked, a form appears asking the user for their name,
+      phone number and email address. When they submit this information,
+      the moose spins and the carnival man announces the players prize
+      in a speech bubble.</p>
+    </div>
 
-<div class="build">
-  <h2 class="title">Build</h2>
-  <p>The game was created using HTML, SASS and JavaScript. When the
-  button is clicked, a form appears asking the user for their name,
-  phone number and email address. When they submit this information,
-  the moose spins and the carnival man announces the players prize
-  in a speech bubble.</p>
-</div>
-
-<hr>
-
-<div class="test">
-  <h2 class="title">Test</h2>
-  <p>This build was tested using manual testing, which involved
-     creating a test plan containing a number of test cases. When
-     this test was conducted, the result was written up, along
-     with whether or not the build passed this test. User
-     testing was also conducted on this build. This involved users
-     using the build and completing tasks to see how easy it was
-     for users to use this game.
-  </p>
-</div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="contact" id="contact">
-<p>SamanthaCrosby97@Outlook.com</p>
-<p>07596428322</p>
-<p>Based in St. Helens</p>
-<a href="https://stupefied-meitner-cb15ff.netlify.com/SamanthaCrosbyCV.docx"><p>Download CV</p></a>
-
-</div>
-
-<footer>
-  <div class="social">
-    <a href="https://www.linkedin.com/in/samantha-crosby-974496112/">
-      <img src="images/linkedin2.png"></img>
-  </a>
-    <a href="https://github.com/SamCrosby">
-      <img src="images/github.png"></img>
-  </a>
-  <a href="#">
-    <img src="images/Twitter3.svg" class="twitter"></img>
-  </a>
+    <hr>
+    <!--This is the test section-->
+    <div class="test">
+      <!--This is the test title-->
+      <h2 class="title">Test</h2>
+      <!--This is the test text-->
+      <p>This build was tested using manual testing, which involved
+         creating a test plan containing a number of test cases. When
+         this test was conducted, the result was written up, along
+         with whether or not the build passed this test. User
+         testing was also conducted on this build. This involved users
+         using the build and completing tasks to see how easy it was
+         for users to use this game.
+      </p>
+    </div>
   </div>
 
+  <!--This is the contact section-->
+  <div class="contact" id="contact">
+    <!--This is the email address-->
+    <p>SamanthaCrosby97@Outlook.com</p>
+    <!--This is the phone number-->
+    <p>07596428322</p>
+    <!--This is the location-->
+    <p>Based in St. Helens</p>
+    <!--This is the link to download the CV-->
+    <a href="https://stupefied-meitner-cb15ff.netlify.com/SamanthaCrosbyCV.docx"><p>Download CV</p></a>
+  </div>
+
+  <!--This is the footer section-->
+<footer>
+  <!--This is the social media section-->
+  <div class="social">
+    <!--This is the link to linkedin-->
+    <a href="https://www.linkedin.com/in/samantha-crosby-974496112/">
+      <img src="images/linkedin2.png"></img>
+    </a>
+    <!--This is the link to github-->
+    <a href="https://github.com/SamCrosby">
+      <img src="images/github.png"></img>
+    </a>
+    <!--This is the link to twitter-->
+    <a href="#">
+      <img src="images/Twitter3.svg" class="twitter"></img>
+    </a>
+  </div>
+
+  <!--This is the copyright-->
   <div class="copyright">
     <p>&copy;Samantha Crosby 2018</p>
   </div>
 </footer>
-
 </body>
 </html>
