--- a/Rubyside/rubyside.html
+++ b/Rubyside/rubyside.html
@@ -2,22 +2,23 @@
 <html>
 <head>
   <title>Rubyside</title>
+  <!--this is the link to the stylesheet-->
   <link rel="stylesheet" type="text/css" href="grid.css">
+  <!--this is the link to the stylesheet-->
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
 <body>
   <div class="wrapper">
+    <!--this is the header for the site-->
     <header>
-      <!-- <div> -->
         <div class="parent grid-container grid-x">
-        <!-- <div class="cell small-11"> -->
+          <!--this is the rubyside logo-->
           <img style="max-width:300px;" class="logo" src="rubyside.svg" alt="Rubyside Logo">
-        <!-- </div> -->
-        <!-- </div> -->
         <div class="parent grid-container">
           <div class="cell small-hidden">
             <ul>
+              <!--this is the navigation-->
               <div class="topnav" id="myTopnav">
                 <li><a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a></li>
                 <li><a href="#organisers">Organisers</a></li>
@@ -30,105 +31,104 @@
         </div>
       </div>
     </header>
+    <!--this is the bounce back to top of page button-->
+    <button class="bounce" onclick="window.location.href='#'" id="top">&Hat;</button>
+    <div class="parent grid-container grid-x">
+      <div class="cell small-11">
+        <!--this is the about rubyside title-->
+        <h3 class="title" id="rubyside">What is Rubyside?</h3>
+        <!--this is the about rubyside text-->
+        <p>Rubyside is an interest group for Ruby and Ruby on Rails Enthusiasts in Liverpool, Merseyside and the surrounding areas.</p>
+      </div>
+    </div>
 
-<button class="bounce" onclick="window.location.href='#'" id="top">&Hat;</button>
-<div class="parent grid-container grid-x">
-  <div class="cell small-11">
-      <h3 class="title" id="rubyside">What is Rubyside?</h3>
-    <p>Rubyside is an interest group for Ruby and Ruby on Rails Enthusiasts in Liverpool, Merseyside and the surrounding areas.</p>
+    <div class="parent grid-container grid-x">
+      <div class="cell small-11">
+        <!--this is the next event title-->
+        <h3 class="title" id="event">Next Event</h3>
+        <!--this is the next event text-->
+        <p>Rubyside #9 Wednesday 19th April 2017 | 6pm - 8pm
+        <br>
+        Lightning Talks
+        <br>
+        <br>
+        Come and share your knowlege and learn from others at Rubyside's first ever lightning talk session! Venue to be confirmed!</p>
+        <!--this is the button to EventBrite-->
+        <button class="button" onclick="window.location.href='https://www.eventbrite.co.uk'">Register!</button>
+      </div>
+    </div>
+
+    <div class="parent grid-container grid-x">
+      <div class="cell small-11">
+        <!--this is the organisers title-->
+        <h3 class="title" id="organisers">Organisers</h3>
+      </div>
+    </div>
+
+    <div class="parent grid-container grid-x">
+      <div class="organisers">
+        <div class="test">
+          <!--this is the clip class that creates the red border on the images-->
+          <div class="clip">
+            <div class="cell small-12">
+              <!--this is one of the organisers images-->
+              <img src="daniel2.png" alt="Daniel Nicolson - Director, Cleversteam">
+              </img>
+          </div>
+        </div>
+
+        <!--this is the clip class that creates the red border on the images-->
+        <div class="clip">
+          <div class="cell small-12">
+            <!--this is one of the organisers images-->
+            <img src="mike2.png" alt="Mike Hart - Technical Director, Cleversteam ">
+            </img>
+          </div>
+        </div>
+
+      <!--this is the clip class that creates the red border on the images-->
+        <div class="clip">
+          <div class="cell small-12">
+            <!--this is one of the organisers images-->
+          <img src="tom.png" alt="Tom Dracz - Developer, Cleversteam">
+          </img>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-
-<div class="parent grid-container grid-x">
-  <div class="cell small-11">
-    <h3 class="title" id="event">Next Event</h3>
-    <p>Rubyside #9 Wednesday 19th April 2017 | 6pm - 8pm
-    <br>
-    Lightning Talks
-    <br>
-    <br>
-    Come and share your knowlege and learn from others at Rubyside's first ever lightning talk session! Venue to be confirmed!</p>
-
-    <button class="button" onclick="window.location.href='https://www.eventbrite.co.uk'">Register!</button>
-
-  </div>
+<!--this pushes the footer to the bottom-->
+<div class="push">
 </div>
-
-<div class="parent grid-container grid-x">
-  <div class="cell small-11">
-    <h3 class="title" id="organisers">Organisers</h3>
-  </div>
-</div>
-
-<div class="parent grid-container grid-x">
-<div class="organisers">
-<div class="test">
-  <div class="clip">
-    <div class="cell small-12">
-    <img src="daniel2.png" alt="Daniel Nicolson - Director, Cleversteam">
-    </img>
-  </div>
-</div>
-
-
-
-  <div class="clip">
-    <div class="cell small-12">
-    <img src="mike2.png" alt="Mike Hart - Technical Director, Cleversteam ">
-    </img>
-  </div>
-</div>
-
-
-  <div class="clip">
-    <div class="cell small-12">
-    <img src="tom.png" alt="Tom Dracz - Developer, Cleversteam">
-    </img>
-  </div>
-</div>
-
-<!-- <div class="organiserNames">
-<ul>
-  <li>Daniel Nicolson</li>
-  <li>Mike Hart</li>
-  <li>Tom Dracz</li>
-</ul>
-</div> -->
-
-</div>
-</div>
-</div>
-
-
-
-<div class="push"></div>
 </div>
 <footer>
-<div>
-  <a href="https://www.cleversteam.com/uk">
-  <img class="cleversteam" src="CleverSteam.png"></img>
-</a>
-</div>
-<div class="parent left grid-container grid-x">
-<!-- <div> -->
-<div class="cell small-6">
-
-<div class="icons">
-    <a href="#">
-      <img class="slack" src="SlackWhite.svg"></img>
+  <div>
+    <!--this is the link to the cleversteam site-->
+    <a href="https://www.cleversteam.com/uk">
+      <!--this is the cleversteam logo-->
+      <img class="cleversteam" src="CleverSteam.png"></img>
     </a>
   </div>
-</div>
-
-  <div class="cell small-6">
+  <div class="parent left grid-container grid-x">
   <!-- <div> -->
-    <a href="http://twitter.com/rubyside">
-      <img class="twitter" src="Twitter.svg"></img>
-    </a>
-  </div>
-</div>
-</div>
-</footer>
+    <div class="cell small-6">
+      <div class="icons">
+        <!--this is where the link to the slack channel will go-->
+        <a href="#">
+          <!--this is the slack icon-->
+          <img class="slack" src="SlackWhite.svg"></img>
+        </a>
+      </div>
+    </div>
 
-  </body>
+    <div class="cell small-6">
+      <!--this is the link to the Rubyside twitter-->
+      <a href="http://twitter.com/rubyside">
+        <!--this is the twitter icon-->
+        <img class="twitter" src="Twitter.svg"></img>
+      </a>
+    </div>
+  </div>
+</footer>
+</body>
 </html>
