--- a/SpinTheMoose/SpinTheMoose.html
+++ b/SpinTheMoose/SpinTheMoose.html
@@ -2,45 +2,54 @@
 <html>
 <head>
   <title>Spin The Moose</title>
-  <link rel="stylesheet" type="text/css" href="Style.css">
+  <!--This is the link to the stylesheet-->
+  <link rel="stylesheet" type="text/css" href="temp.css">
+  <!--This is the link to the JavaScript file-->
   <script src="test.js"></script>
+  <!--This is the link to jQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
 <body>
+  <!--This is the div for the background, which includes the carnival stall background-->
   <div class="stall">
     <div class="parent left grid-container grid-x">
       <div class="cell small-6">
-        <h1 style="padding-bottom:10px;">Summer Camp Canada</h1>
+        <!--This is the title of the page-->
+        <h1>Summer Camp Canada</h1>
         <!-- <div class="right"> -->
       </div>
-    <div class="right">
+      <div class="right">
       <div class="cell small-6">
+        <!--This is the phone number for smaller earth.-->
         <h2>Call Now on 0151 7026808</h2>
       </div>
     </div>
   </div>
-
+  <!--This is the button the user presses to produce the pop-up form-->
   <div class="button">
-    <button id="spin" onClick="popup();" type="button" style="float:left;">Click to spin the moose!</button>
+    <button id="spin" onClick="popup();" type="button">Click to spin the moose!</button>
   </div>
 
     <!--The board that displays the prizes-->
     <img class="spinner" align="center" src="Images/Spinner.png" alt="Spinner">
+    <!--This is the moose that spins-->
     <img id="moose" class="moose" src="Images/moose3.png" alt="moose">
-
- <div id="speech" class="speech" hidden>
-   <svg height="200" width="400">
-    <polygon class="triangle" style="position:relative;left:50px;" points="8,30 70,90 80,40"/>
-    <ellipse class="circle" cx="150" cy="80" rx="100" ry="60"/>
-  </svg>
- </div>
- <div id="bubble" style="position:relative;left:calc(74%);top:calc(38%);display:none;" >
-   <p>Congratulations!</p>
-   <p>You have won </p>
-   <p id="prizes" style="text-align:center;"></p>
- </div>
-
+    <!--This is the div that contains the speech bubble-->
+   <div id="speech" class="speech" hidden>
+     <!--This is the svg which is the speech bubble, made up of a polygon and an ellipse-->
+     <svg height="200" width="400">
+      <polygon class="triangle" style="position:relative;left:50px;" points="8,30 70,90 80,40"/>
+      <ellipse class="circle" cx="150" cy="80" rx="100" ry="60"/>
+    </svg>
+   </div>
+   <!--This is the congratulatory text that appears to announce the prize the user has won-->
+   <div id="bubble" class="bubble">
+     <p>Congratulations!</p>
+     <p>You have won </p>
+     <p id="prizes" class="prizes"></p>
+   </div>
+   <!--This is the div for the modal-->
     <div id="modal" class="modal">
       <!-- Modal content -->
       <div class="modal-content">
@@ -48,7 +57,7 @@
           <!--Form inside the modal box that the user fills in their details, before they
           can spin the moose. When the form is submitted, the spin function is then ran.-->
           <form action="#" id="contact" data-parsley-validate="" onsubmit="spin()">
-            <p style="font-size:20px;text-align:center;">Please enter your details to spin the moose and win a prize!</p>
+            <p class="formInstructions">Please enter your details to spin the moose and win a prize!</p>
             <!--The fields the user has to fill in (Full name, phone number and email address).-->
             <div class="modaltext">
               Full Name:<br>
@@ -62,6 +71,7 @@
               <br><br>
             </div>
             <!-- <button id="spin2" class="submit" type="submit">Submit</button> -->
+            <!--This is the submit button for the form that runs the speechBubble() function when the button is clicked.-->
             <input id="spin2" class="submit" onClick="speechBubble();" type="submit" value="Submit">
           </form>
         </div>
