--- a/Rubyside/rubyside.html
+++ b/Rubyside/rubyside.html
@@ -14,7 +14,7 @@
     <header>
         <div class="parent grid-container grid-x">
           <!--this is the rubyside logo-->
-          <img style="max-width:300px;" class="logo" src="rubyside.svg" alt="Rubyside Logo">
+          <img style="max-width:300px;" class="logo" src="Images/rubyside.svg" alt="Rubyside Logo">
         <div class="parent grid-container">
           <div class="cell small-hidden">
             <ul>
@@ -72,7 +72,7 @@
           <div class="clip">
             <div class="cell small-12">
               <!--this is one of the organisers images-->
-              <img src="daniel2.png" alt="Daniel Nicolson - Director, Cleversteam">
+              <img src="Images/daniel2.png" alt="Daniel Nicolson - Director, Cleversteam">
               </img>
           </div>
         </div>
@@ -81,7 +81,7 @@
         <div class="clip">
           <div class="cell small-12">
             <!--this is one of the organisers images-->
-            <img src="mike2.png" alt="Mike Hart - Technical Director, Cleversteam ">
+            <img src="Images/mike2.png" alt="Mike Hart - Technical Director, Cleversteam ">
             </img>
           </div>
         </div>
@@ -90,7 +90,7 @@
         <div class="clip">
           <div class="cell small-12">
             <!--this is one of the organisers images-->
-          <img src="tom.png" alt="Tom Dracz - Developer, Cleversteam">
+          <img src="Images/tom.png" alt="Tom Dracz - Developer, Cleversteam">
           </img>
         </div>
       </div>
@@ -106,7 +106,7 @@
     <!--this is the link to the cleversteam site-->
     <a href="https://www.cleversteam.com/uk">
       <!--this is the cleversteam logo-->
-      <img class="cleversteam" src="CleverSteam.png"></img>
+      <img class="cleversteam" src="Images/CleverSteam.png"></img>
     </a>
   </div>
   <div class="parent left grid-container grid-x">
@@ -116,7 +116,7 @@
         <!--this is where the link to the slack channel will go-->
         <a href="#">
           <!--this is the slack icon-->
-          <img class="slack" src="SlackWhite.svg"></img>
+          <img class="slack" src="Images/SlackWhite.svg"></img>
         </a>
       </div>
     </div>
@@ -125,7 +125,7 @@
       <!--this is the link to the Rubyside twitter-->
       <a href="http://twitter.com/rubyside">
         <!--this is the twitter icon-->
-        <img class="twitter" src="Twitter.svg"></img>
+        <img class="twitter" src="Images/Twitter.svg"></img>
       </a>
     </div>
   </div>
