--- a/Rubyside/rubyside.html
+++ b/Rubyside/rubyside.html
@@ -3,9 +3,9 @@
 <head>
   <title>Rubyside</title>
   <!--this is the link to the stylesheet-->
-  <link rel="stylesheet" type="text/css" href="grid.css">
+  <!-- <link rel="stylesheet" type="text/css" href="grid.css"> -->
   <!--this is the link to the stylesheet-->
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style2.css">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
 <body>
@@ -15,12 +15,12 @@
         <div class="parent grid-container grid-x">
           <!--this is the rubyside logo-->
           <img style="max-width:300px;" class="logo" src="Images/rubyside.svg" alt="Rubyside Logo">
-        <div class="parent grid-container">
+        <div class="parent1 grid-container">
           <div class="cell small-hidden">
             <ul>
               <!--this is the navigation-->
               <div class="topnav" id="myTopnav">
-                <li><a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a></li>
+                <li><a href="javasgrid-container grid-xcript:void(0);" class="icon" onclick="myFunction()" style="display:none;">&#9776;</a></li>
                 <li><a href="#organisers">Organisers</a></li>
                 <li><a href="#event">Events</a></li>
                 <li><a href="#rubyside">What is Rubyside?</a></li>
@@ -33,7 +33,7 @@
     </header>
     <!--this is the bounce back to top of page button-->
     <button class="bounce" onclick="window.location.href='#'" id="top">&Hat;</button>
-    <div class="parent grid-container grid-x">
+    <div class="parent2 grid-container grid-x">
       <div class="cell small-11">
         <!--this is the about rubyside title-->
         <h3 class="title" id="rubyside">What is Rubyside?</h3>
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <div class="parent grid-container grid-x">
+    <div class="parent3 grid-container grid-x">
       <div class="cell small-11">
         <!--this is the next event title-->
         <h3 class="title" id="event">Next Event</h3>
@@ -58,14 +58,14 @@
       </div>
     </div>
 
-    <div class="parent grid-container grid-x">
+    <div class="parent4 grid-container grid-x">
       <div class="cell small-11">
         <!--this is the organisers title-->
         <h3 class="title" id="organisers">Organisers</h3>
       </div>
     </div>
 
-    <div class="parent grid-container grid-x">
+    <div class="parent5">
       <div class="organisers">
         <div class="test">
           <!--this is the clip class that creates the red border on the images-->
@@ -109,7 +109,7 @@
       <img class="cleversteam" src="Images/CleverSteam.png"></img>
     </a>
   </div>
-  <div class="parent left grid-container grid-x">
+  <div class="parent6 left grid-container grid-x">
   <!-- <div> -->
     <div class="cell small-6">
       <div class="icons">
